commodities id = ledger
